--- a/charts/workload-variant-autoscaler/crds/llmd.ai_variantautoscalings.yaml
+++ b/charts/workload-variant-autoscaler/crds/llmd.ai_variantautoscalings.yaml
@@ -134,26 +134,38 @@ spec:
                 type: object
               scaleTargetRef:
                 description: |-
-                  ScaleTargetRef references the target resource (Deployment) to scale.
+                  ScaleTargetRef references the scalable resource to manage.
                   This follows the same pattern as HorizontalPodAutoscaler.
                 properties:
                   apiVersion:
-                    description: APIVersion is the API version of the target resource.
-                    minLength: 1
+                    description: apiVersion is the API version of the referent
                     type: string
                   kind:
-                    description: Kind is the kind of the target resource. Currently
-                      only "Deployment" is supported.
-                    enum:
-                    - Deployment
+                    description: 'kind is the kind of the referent; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                     type: string
                   name:
-                    description: Name is the name of the target resource.
-                    minLength: 1
+                    description: 'name is the name of the referent; More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                     type: string
                 required:
                 - kind
                 - name
+                type: object
+                x-kubernetes-map-type: atomic
+              slo:
+                description: SLO defines the Service Level Objectives for this variant.
+                properties:
+                  maxITL:
+                    description: MaxITL is the maximum acceptable Inter-Token Latency
+                      in milliseconds.
+                    format: int32
+                    minimum: 0
+                    type: integer
+                  maxTTFT:
+                    description: MaxTTFT is the maximum acceptable Time To First Token
+                      in milliseconds.
+                    format: int32
+                    minimum: 0
+                    type: integer
                 type: object
               variantCost:
                 default: "10.0"
