--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,5 +5,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: ghcr.io/llm-d-incubation/workload-variant-autoscaler
-  newTag: v0.4.1
+  newName: quay.io/asmalvan/wva-cap
+  newTag: latest
